# scavenger-hunt

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
conf/: settings.py  urls.py
conf/templates/: base.html
home/: models.py
home/migrations/: 0003_homepage_body_homepage_hero_cta_and_more.py  0004_homepage_potato.py
home/static/css/: home_page.css
location/: models.py  views.py
location/migrations/: 0001_initial.py  0002_locationpage_location_image.py  0003_locationpage_hint_image.py
location/templates/location/: location_page.html
