[project]
name = "scavenger-hunt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-rich>=1.13.0",
    "django>=5.1,<5.2",
    "pillow>=11.1.0",
    "psycopg[binary]>=3.2.4",
    "wagtail>=6.3,<6.4",
    "environs[django]>=14.1.0",
    "whitenoise>=6.8.2",
    "gunicorn>=23.0.0",
    "django-storages[s3]>=1.14.4",
    "sentry-sdk[django]>=2.20.0",
]
